--- a/mariners.html
+++ b/mariners.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mariners Polytechnic Colleges</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mariners Polytechnic Colleges Foundation</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -20,49 +17,43 @@
     header {
       text-align: center;
       padding: 3rem 1rem 2rem;
-      color: #fff;
       font-size: 2.8rem;
       font-weight: bold;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
       background-color: #0065F8;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     .main-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: flex-start;
       max-width: 1200px;
       margin: auto;
       padding: 2rem;
       gap: 2rem;
     }
 
-    .image-container {
-      flex: 1 1 300px;
-      max-width: 500px;
-      margin-top: 20px;
-      transform: translateX(-10px);
+    .image-container, .description-container {
+      flex: 1 1 200px;
+      max-width: 100%;
     }
 
     .image-container img {
       width: 100%;
-      height: auto;
       border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
 
     .description-container {
-      flex: 1 1 300px;
-      background-color: rgba(255, 255, 255, 0.95);
+      background-color: #fff;
+      color: #333;
       border-radius: 12px;
       padding: 2rem;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      color: #222;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
     .description-container h2 {
-      color: #093FB4;
+      color: #0065F8;
       margin-bottom: 1rem;
     }
 
@@ -76,21 +67,20 @@
     .qr-container {
       margin-top: 2rem;
       text-align: center;
-      background: #e9f0ff;
+      background: #e8f0ff;
       padding: 1.5rem;
       border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
     }
 
     .qr-container img {
-      max-width: 120px;
       width: 100%;
-      height: auto;
+      max-width: 120px;
     }
 
     .qr-container p {
       margin-top: 0.8rem;
-      color: #222;
+      color: #333;
       font-weight: 500;
     }
 
@@ -104,17 +94,17 @@
     .back-button-top a {
       display: inline-block;
       padding: 0.5rem 1rem;
-      background-color: #093FB4;
+      background-color: #0065F8;
       color: #fff;
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
       transition: background-color 0.3s ease;
     }
 
     .back-button-top a:hover {
-      background-color: #062a87;
+      background-color: #004bc5;
     }
 
     @media (max-width: 768px) {
@@ -127,31 +117,45 @@
         font-size: 2.2rem;
       }
     }
+
+    @media (max-width: 480px) {
+      header {
+        font-size: 1.8rem;
+        padding: 4rem 1rem;
+      }
+
+      .description-container p {
+        font-size: 1rem;
+      }
+
+      .back-button-top a {
+        font-size: 0.9rem;
+        padding: 0.4rem 0.8rem;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <header>
-    Mariners Polytechnic Colleges
-  </header>
+  <header>Mariners Polytechnic Colleges Foundation</header>
 
   <section class="main-container">
     <div class="image-container">
-      <img src="assets/mariners.png" alt="Mariners Polytechnic Campus">
+      <img src="assets/mariners.png" alt="Mariners Campus">
     </div>
 
     <div class="description-container">
-      <h2>Maritime Education and Beyond</h2>
+      <h2>Charting Paths in Maritime Excellence</h2>
       <p>
-        Mariners Polytechnic Colleges is a leading institution in maritime and technical education in the Bicol Region. With a strong foundation in seafaring, engineering, and hospitality programs, it prepares students to be globally competitive professionals.
+        Mariners Polytechnic Colleges Foundation is a premier maritime school offering specialized education and training for the global shipping industry. With modern simulators and experienced faculty, Mariners ensures students are well-prepared for careers at sea and beyond.
       </p>
       <p>
-        The college emphasizes discipline, excellence, and international readiness. Mariners provides hands-on training, competent faculty, and industry partnerships to ensure that its graduates are equipped for both local and international opportunities.
+        The institution combines technical skills, discipline, and a global perspective to produce world-class maritime professionals and industry leaders.
       </p>
 
       <div class="qr-container">
         <img src="assets/mariners-qr.png" alt="Scan QR Code">
-        <p>Scan to locate about Mariners</p>
+        <p>Scan to learn more about Mariners</p>
       </div>
 
       <div class="back-button-top">
