--- a/page2.html
+++ b/page2.html
@@ -2,27 +2,115 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="style/page2.css">
-  <title>School Logos 3D Manual Slider</title>
- 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>School Location Tracker</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #fef9c3, #dbeafe);
+      padding: 2rem;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 2rem;
+      color: #1e3a8a;
+      text-align: center;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, auto);
+      gap: 2rem;
+      width: 100%;
+      max-width: 1000px;
+      padding: 0 1rem;
+      justify-items: center;
+    }
+
+    .container a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.3s ease;
+      text-align: center;
+      width: 90%;
+      max-width: 300px; /* max width for each card */
+      aspect-ratio: 1 / 1; /* keep square shape */
+      padding: 1rem;
+    }
+
+    .container a:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
+    }
+
+    .container img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 8px;
+    }
+
+    @media (max-width: 700px) {
+      .container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto);
+      }
+
+      .container a {
+        max-width: 250px;
+      }
+
+      h1 {
+        font-size: 1.8rem;
+      }
+    }
+
+    @media (max-width: 400px) {
+      .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, auto);
+      }
+
+      .container a {
+        max-width: 200px;
+        margin: 0 auto;
+      }
+
+      h1 {
+        font-size: 1.4rem;
+      }
+    }
+  </style>
 </head>
 <body>
- 
-  <h1>SELECT SCHOOL YOU WANNA TRACK.</h1>
- 
+
+  <h1>Select the School You Want to Track</h1>
 
   <div class="container">
-    
-      <a href="dwcl.html"><img src="assets/dwcl-logo.jpg" alt="Divine Word College of Legazpi" /></a>
-      <a href="ustl.html"><img src="assets/ustl-logo.jpg" alt="UST Legazpi" /></a>
-      <a href="bu.html"><img src="assets/bu.png" alt="Bicol University" /></a>
-      <a href="mariners.html"><img src="assets/mariners.jpg" alt="Polytechnic College" /></a>
-      <a href="bc.html"><img src="assets/BC.jpg" alt="Bicol College" /></a>
-      <a href="amec.html"><img src="assets/amec-logo.jpg" alt="Ago Medical and Educational Center" /></a>
-    </div>
+    <a href="dwcl.html"><img src="assets/dwcl-logo.jpg" alt="Divine Word College of Legazpi" /></a>
+    <a href="ustl.html"><img src="assets/ustl-logo.jpg" alt="UST Legazpi" /></a>
+    <a href="bu.html"><img src="assets/bu.png" alt="Bicol University" /></a>
+    <a href="mariners.html"><img src="assets/mariners.jpg" alt="Mariners Polytechnic College" /></a>
+    <a href="bc.html"><img src="assets/BC.jpg" alt="Bicol College" /></a>
+    <a href="amec.html"><img src="assets/amec-logo.jpg" alt="Ago Medical and Educational Center" /></a>
   </div>
 
-  
 </body>
 </html>
