--- a/index.html
+++ b/index.html
@@ -4,122 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style/index.css">
   <title>Welcome | Albay School Tracker</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #dbeafe, #fef3c7);
-      color: #333;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 2rem;
-      position: relative;
-    }
-
-    .container {
-      max-width: 800px;
-      background: linear-gradient(to right, #dbeafe, #fef3c7);
-      padding: 3rem 2.5rem;
-      border-radius: 14px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2.8rem;
-      margin-bottom: 1rem;
-      color: #1e3a8a;
-    }
-
-    p {
-      font-size: 1.15rem;
-      line-height: 1.7;
-      text-align: justify;
-      color: #444;
-    }
-
-    .enter-btn {
-      margin-top: 2.5rem;
-      background-color: #1e3a8a;
-      color: white;
-      border: none;
-      padding: 0.75rem 2rem;
-      font-size: 1.1rem;
-      font-weight: 600;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .enter-btn:hover {
-      background-color: #2563eb;
-    }
-
-    /* Weather box fixed top right */
-    #weatherBox {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background-color: rgba(255, 255, 255, 0.95);
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.12);
-      padding: 1rem 1.2rem;
-      max-width: 200px;
-      font-size: 0.9rem;
-      color: #222;
-      text-align: center;
-      z-index: 1000;
-      user-select: none;
-    }
-
-    #weatherBox img {
-      vertical-align: middle;
-      width: 50px;
-      height: 50px;
-    }
-
-    @media (max-width: 600px) {
-      body {
-        padding: 1rem;
-      }
-
-      .container {
-        padding: 2rem 1.5rem;
-      }
-
-      h1 {
-        font-size: 2rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
-
-      .enter-btn {
-        font-size: 1rem;
-        padding: 0.6rem 1.5rem;
-      }
-
-      #weatherBox {
-        max-width: 160px;
-        font-size: 0.85rem;
-        padding: 0.75rem 1rem;
-      }
-
-      #weatherBox img {
-        width: 40px;
-        height: 40px;
-      }
-    }
-  </style>
+ 
 </head>
 
 <body>
