--- a/amec.html
+++ b/amec.html
@@ -3,137 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="style/amec.css">
   <title>AMEC - Bicol</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #CC66DA, #FEEBF6);
-      color: #333;
-      min-height: 100vh;
-    }
-
-    header {
-      text-align: center;
-      padding: 3rem 1rem 2rem;
-      background-color: #CC66DA;
-      font-size: 2.8rem;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-    }
-
-    .main-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      max-width: 1200px;
-      margin: auto;
-      padding: 2rem;
-      gap: 2rem;
-    }
-
-    .image-container, .description-container {
-      flex: 1 1 200px;
-      max-width: 100%;
-    }
-
-    .image-container img {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-    }
-
-    .description-container {
-      background-color: rgba(255, 255, 255, 0.96);
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    }
-
-    .description-container h2 {
-      color: #CC66DA;
-      margin-bottom: 1rem;
-    }
-
-    .description-container p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #444;
-      text-align: justify;
-    }
-
-    .qr-container {
-      margin-top: 2rem;
-      text-align: center;
-      background: #fdf1fb;
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
-    }
-
-    .qr-container img {
-      width: 100%;
-      max-width: 120px;
-    }
-
-    .qr-container p {
-      margin-top: 0.8rem;
-      color: #333;
-      font-weight: 500;
-    }
-
-    .back-button-top {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      z-index: 1000;
-    }
-
-    .back-button-top a {
-      display: inline-block;
-      padding: 0.5rem 1rem;
-      background-color: #CC66DA;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-      transition: background-color 0.3s ease;
-    }
-
-    .back-button-top a:hover {
-      background-color: #aa4db8;
-    }
-
-    @media (max-width: 768px) {
-      .main-container {
-        flex-direction: column;
-        padding: 1.5rem;
-      }
-
-      header {
-        font-size: 2.2rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header {
-        font-size: 1.8rem;
-        padding: 3rem 1rem;
-      }
-
-      .description-container p {
-        font-size: 1rem;
-      }
-
-      .back-button-top a {
-        font-size: 0.9rem;
-        padding: 0.4rem 0.8rem;
-      }
-    }
-  </style>
 </head>
 <body>
 
