amec updated with qr

--- a/amec.html
+++ b/amec.html
@@ -25,7 +25,7 @@
       </p>
 
       <div class="qr-container">
-        <img src="assets/amec-qr.png" alt="Scan QR Code">
+        <img src="assets/ago-qr.png" alt="Scan QR Code">
         <p>Scan to learn more about AMEC</p>
       </div>
 
