--- a/amec.html
+++ b/amec.html
@@ -26,7 +26,7 @@
 
       <div class="qr-container">
         <img src="assets/ago-qr.png" alt="Scan QR Code">
-        <p>Scan to learn more about AMEC</p>
+        <p>Scan to locate AMEC</p>
       </div>
 
       <div class="back-button-top">
