--- a/bc.html
+++ b/bc.html
@@ -28,7 +28,7 @@
 
       <div class="qr-container">
         <img src="assets/bc-qr.png" alt="Scan QR Code">
-        <p>Scan to learn more about Bicol College</p>
+        <p>Scan to locate Bicol College</p>
       </div>
 
       <div class="back-button-top">
