--- a/mariners.html
+++ b/mariners.html
@@ -27,7 +27,7 @@
 
       <div class="qr-container">
         <img src="assets/mariners-qr.png" alt="Scan QR Code">
-        <p>Scan to learn more about Mariners</p>
+        <p>Scan to locate Mariners Polytechnic Colleges Foundation</p>
       </div>
 
       <div class="back-button-top">
