--- a/ustl.html
+++ b/ustl.html
@@ -22,7 +22,7 @@
 
       <div class="qr-container">
         <img src="assets/ustl-qr.png" alt="Scan QR Code">
-        <p>Scan to learn more about UST-Legazpi</p>
+        <p>Scan to locate UST-Legazpi</p>
       </div>
 
       <div class="back-button-top">
